@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

abstract class Command {
  # parser: Parser
  # ui: Ui
  + execute() : void
}

class AddInternshipCommand {
  - internshipList: InternshipList
  + AddInternshipCommand(parser: Parser, internshipList: InternshipList)
  + execute() : void
}

class InternshipList {
  + getSize() : int
  + get(index: int) : Internship
  + add(internship: Internship) : void
}

class Internship {
  + Internship(title: String, companyName: String)
  + equals(obj: Object) : boolean
}

Command <|-- AddInternshipCommand
AddInternshipCommand --> "1" InternshipList : appends to >
AddInternshipCommand ..> Internship : creates >

@enduml